HomePage valueprop spacing corrected

--- a/app/styles/home-view.sass
+++ b/app/styles/home-view.sass
@@ -195,11 +195,14 @@
         background-color: white
         box-shadow: 2px 2px 6px 0 rgba(155,155,155,0.67)
         padding: 19px
-        height: 350px
         @media (max-width: $screen-lg-min)
           height: 100%
         h3
-          margin: 30px auto 6px
+          margin: 20px auto 10px
+        p
+          margin-bottom: 20px
+          @media (max-width: $screen-lg-min)
+            margin-bottom: 35px
 
     #built-for-teachers
       padding: 62px
